force-app/main/default/objects/Request_Form__c/Request_Form__c.object-meta.xml
<CustomObject>
    <label>Request Form</label>
    <nameField>
        <label>Request Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>