force-app/main/default/objects/Request_Form__c/fields/Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contacts__c</fullName>
    <label>Additional Contacts</label>
    <type>TextArea</type>
</CustomField>