force-app/main/default/objects/Request_Form__c/fields/Business_relationship_description__c.field-meta.xml
<CustomField>
    <fullName>Business_relationship_description__c</fullName>
    <label>Business relationship description</label>
    <type>TextArea</type>
</CustomField>