force-app/main/default/objects/Request_Form__c/fields/Confidential_Information_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Information_Contractors__c</fullName>
    <label>Confidential Information Contractors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>