force-app/main/default/objects/Request_Form__c/fields/Confidential_Information_Parties__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Information_Parties__c</fullName>
    <label>Confidential Information Parties</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Just Omnitracs</fullName>
            </value>
            <value>
                <fullName>Both/All Parties</fullName>
            </value>
            <value>
                <fullName>Just the other party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>