force-app/main/default/objects/Request_Form__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <label>Functional Area</label>
    <length>200</length>
    <type>Text</type>
</CustomField>