force-app/main/default/objects/Request_Form__c/fields/Include_affiliates__c.field-meta.xml
<CustomField>
    <fullName>Include_affiliates__c</fullName>
    <label>Include affiliates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>