force-app/main/default/objects/Request_Form__c/fields/Primary_reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_reason__c</fullName>
    <label>Primary reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technology Evaluation: Make v. Buy</fullName>
            </value>
            <value>
                <fullName>Potential Acquisition of a company or its assets or patents</fullName>
            </value>
            <value>
                <fullName>Other: (explain below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>