force-app/main/default/objects/Request_Form__c/fields/Primary_reason_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Primary_reason_Other_Description__c</fullName>
    <label>Primary reason : Other Description</label>
    <type>TextArea</type>
</CustomField>