force-app/main/default/objects/Request_Form__c/fields/Request_For_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Request_For_Amendment__c</fullName>
    <label>Request For Amendment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>