force-app/main/default/objects/Request_Form__c/fields/Test_Notes__c.field-meta.xml
<CustomField>
    <fullName>Test_Notes__c</fullName>
    <label>Test Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>